TMA M250 02/TMA02_Project_Q2_SOL/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_21\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\BlueJ\lib\bluejcore.jar;C:\BlueJ\lib\junit-4.8.2.jar;C:\BlueJ\lib\userlib\asm-debug-all-4.0_RC1.jar;C:\BlueJ\lib\userlib\bsh-2.1b2_OU.jar;C:\BlueJ\lib\userlib\ou.jar;C:\BlueJ\lib\userlib\swingx-core-1.6.2.jar;C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL
-d
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\doc
-encoding
US-ASCII
-charset
US-ASCII
-docletpath
C:\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java
<---- end of javadoc command ---->
Loading source file C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java...
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java:30: error: ')' expected
      if (this.getFirstName.isEqual("null") || this.getSecondName.isEqual("null") 
                                                                                 ^
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java:32: error: ';' expected
         return false
                     ^
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java:34: error: illegal start of expression
     else (return true )
           ^
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java:34: error: not a statement
     else (return true )
          ^
C:\Users\user\Downloads\TMA02Download\TMA02_Project_Q2_SOL\Employee.java:34: error: ';' expected
     else (return true )
                      ^
5 errors
